...
) {
    Column(
        Modifier
            .fillMaxSize()
            .indicatedVerticalScroll(rememberScrollState())
            .padding(16.dp)
            .testTag("screen-models"),
    ) {
        ProviderManager(providerService, initialSource)
    }
}

@Composable
...
